# terminrt

./: .gitignore  Cargo.toml  README.md
docs/: ui-layout.md
src/: devtools.rs  font.rs  input.rs  leftpanel.rs  main.rs  pty.rs  quickcmd.rs  settings.rs  shader.wgsl  startup-page.rs  terminal.rs  topbar.rs
